# django-perimeter

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README  README.md  README.rst  middleware.py  models.py  pyproject.toml  runtests.py  setup.py  tox.ini
.github/workflows/: tox.yml
django_perimeter/: __init__.py  middleware.py
migrations/: 0001_initial.py  0002_auto__chg_field_accesstoken_token__add_unique_accesstoken_token.py
perimeter/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  settings.py  tests.py  urls.py  views.py
perimeter-bypass/: README.md  background.js  manifest.json  options.html  options.js
perimeter/management/: __init__.py
perimeter/management/commands/: __init__.py  create_access_token.py  list_access_tokens.py
perimeter/migrations/: 0001_initial.py  0002_auto_20150611_1234.py  0003_auto_20150612_0151.py  0004_auto_20170407_0639.py  0005_auto_20180520_1037.py
perimeter/templates/: gateway.html
perimeter/templates/perimeter/: gateway.html
perimeter/tests/: __init__.py  test_forms.py  test_functions.py  test_middleware.py  test_models.py  test_views.py
test_app/: __init__.py  settings.py  urls.py
test_app/templates/: index.html
tests/: settings.py  test_forms.py  test_functions.py  test_middleware.py  test_models.py  test_views.py  urls.py
tests/templates/: index.html
